@@ -1,4 +1,10 @@
 ==================================
+Rilascio 1.70.28    del XX/04/2016
+==================================
+
+ryDraw: generazione dei colori per tonalità nei grafici a torta.
+
+==================================
 Rilascio 1.70.27    del 04/04/2016
 ==================================
 
